update from DS (invalid video 2, ep list)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4358 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/epcurate.css
+++ b/stylesheets/epcurate.css
@@ -222,7 +222,7 @@
     display: block;
     width: 14px;
     height: 15px;
-    background: url(../images/check_box.png) no-repeat 0 0;
+    background: url(../images/bg_checkbox.png) no-repeat 0 0;
 }
 
 #content-wrap form .fminput .fmfield p.radio-list .checker input {
@@ -413,39 +413,39 @@
 
 #content-wrap form .fminput .fmfield p.text {
     float: left;
-    height: 29px;
+    height: 30px;
     margin: 0 10px 10px 0;
-    padding-left: 4px;
-    background: url(../images/input_box_left.png) no-repeat 0 0;
+    padding-left: 3px;
+    background: url(../images/bg_input.png) no-repeat 0 0;
 }
 
 #content-wrap form .fminput .fmfield p.text span {
     display: block;
-    padding-right: 4px;
-    background: url(../images/input_box_right.png) no-repeat right 0;
+    padding-right: 3px;
+    background: url(../images/bg_input.png) no-repeat right -30px;
 }
 
 #content-wrap form .fminput .fmfield p.text span .text {
     width: 437px;
-    height: 29px;
+    height: 30px;
     padding-left: 2px;
     border: none;
-    background: url(../images/input_box_middle.png) repeat-x;
+    background: url(../images/bg_input.png) repeat-x 0 -60px;
     color: #555;
     font-family: Arial, Helvetica;
     font-size: 13px;
 }
 
 #content-wrap form .disable .fmfield p.text {
-    background: url(../images/input_box_left_disable.png) no-repeat 0 0;
+    background-position: 0 -90px;
 }
 
 #content-wrap form .disable .fmfield p.text span {
-    background: url(../images/input_box_right_disable.png) no-repeat right 0;
+    background-position: right -120px;
 }
 
 #content-wrap form .disable .fmfield p.text span .text {
-    background: url(../images/input_box_middle_disable.png) repeat-x;
+    background-position: 0 -150px;
     color: #bbb;
 }
 
@@ -459,22 +459,22 @@
 #content-wrap form .fminput .fmfield p.textarea {
     overflow: hidden;
     float: left;
-    height: 64px;
+    height: 92px;
     margin: 0 10px 10px 0;
     padding-left: 3px;
-    background: url(../images/input_box_left_lg.png) no-repeat 0 0;
+    background: url(../images/bg_input_lg.png) no-repeat 0 0;
 }
 
 #content-wrap form .fminput .fmfield p.textarea span {
     display: block;
     padding-right: 3px;
-    background: url(../images/input_box_right_lg.png) no-repeat right 0;
+    background: url(../images/bg_input_lg.png) no-repeat right -92px;
 }
 
 #content-wrap form .fminput .fmfield p.textarea span span {
-    height: 64px;
+    height: 92px;
     padding: 0;
-    background: url(../images/input_box_middle_lg.png) repeat-x;
+    background: url(../images/bg_input_lg.png) repeat-x 0 -184px;
 }
 
 #content-wrap form .fminput .fmfield p.textarea span .textarea {
@@ -491,15 +491,15 @@
 }
 
 #content-wrap form .disable .fmfield p.textarea {
-    background: url(../images/input_box_left_lg_disable.png) no-repeat 0 0;
+    background-position: 0 -276px;
 }
 
 #content-wrap form .disable .fmfield p.textarea span {
-    background: url(../images/input_box_right_lg_disable.png) no-repeat right 0;
+    background-position: right -368px;
 }
 
-#content-wrap form .disable .fmfield p.textarea span .textarea {
-    background: url(../images/input_box_middle_lg_disable.png) repeat-x;
+#content-wrap form .disable .fmfield p.textarea span span {
+    background-position: 0 -460px;
 }
 
 /* =thumbnail
@@ -591,7 +591,7 @@
 #content-wrap form .fminput .fmfield .checkbox {
     float: left;
     height: 19px;
-    background: url(../images/check_box.png) no-repeat 0 center;
+    background: url(../images/bg_checkbox.png) no-repeat 0 0;
     color: #555;
     line-height: 18px;
     text-decoration: none;
@@ -625,26 +625,26 @@
     float: left;
     height: 19px;
     padding-left: 22px;
-    background: url(../images/btn_radio_off.png) no-repeat 0 0;
+    background: url(../images/btn_radio.png) no-repeat 0 0;
     color: #555;
     line-height: 18px;
     text-decoration: none;
 }
 
 #content-wrap form .fminput .fmfield .radio li.on a,
-#content-wrap form .fminput .fmfield .radio li       a:hover {
-    background: url(../images/btn_radio_on.png) no-repeat 0 0;
+#content-wrap form .fminput .fmfield .radio li    a:hover {
+    background-position: 0 -36px;
 }
 
 #content-wrap form .disable .fmfield .radio li a,
 #content-wrap form .disable .fmfield .radio li a:hover {
-    background: url(../images/btn_radio_off_disable.png) no-repeat 0 0;
+    background-position: 0 -18px;
 	color: #bbb;
 }
 
 #content-wrap form .disable .fmfield .radio li.on a,
 #content-wrap form .disable .fmfield .radio li.on a:hover {
-    background: url(../images/btn_radio_on_disable.png) no-repeat 0 0;
+    background-position: 0 -54px;
 }
 
 /* =select
@@ -652,17 +652,16 @@
 
 #content-wrap form .fminput .fmfield .select {
 	position: relative;
-
     float: left;
 	width: 180px;
-	height: 29px;
+	height: 30px;
     margin-right: 10px;
-    padding-left: 4px;
-    background: url(../images/input_box_left.png) no-repeat 0 0;
+    padding-left: 3px;
+    background: url(../images/bg_input.png) no-repeat 0 0;
 }
 
 #content-wrap form .fminput .fmfield .select.disable {
-    background: url(../images/input_box_left_disable.png) no-repeat 0 0;
+    background-position: 0 -90px;
 }
 
 #content-wrap form .fminput .fmfield .select .select-btn {
@@ -684,11 +683,11 @@
 
 #content-wrap form .fminput .fmfield .select .select-txt {
     overflow: hidden;
-    height: 29px;
-    padding: 0 4px 0 0;
-    background: url(../images/input_box_right.png) no-repeat right 0;
+    height: 30px;
+    padding: 0 3px 0 0;
+    background: url(../images/bg_input.png) no-repeat right -30px;
     font-size: 13px;
-    line-height: 29px;
+    line-height: 30px;
     white-space: nowrap;
     text-indent: 5px;
     text-overflow: ellipsis;
@@ -698,20 +697,20 @@
 }
 
 #content-wrap form .fminput .fmfield .select.disable .select-txt {
-    background: url(../images/input_box_right_disable.png) no-repeat right 0;
+    background-position: right -120px;
 }
 
 #content-wrap form .fminput .fmfield .select .select-txt a {
     display: block;
-    height: 29px;
+    height: 30px;
     padding-right: 4px;
-    background: url(../images/input_box_middle.png) repeat-x;
+    background: url(../images/bg_input.png) repeat-x 0 -60px;
     color: #777;
     text-decoration: none;
 }
 
 #content-wrap form .fminput .fmfield .select.disable .select-txt a {
-    background: url(../images/input_box_middle_disable.png) repeat-x;
+    background-position: 0 -150px;
 }
 
 #content-wrap form .fminput .fmfield .select .select-list {
