--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -4,6 +4,10 @@
         =channel-list
 -----------------------------------------------------------------------------*/
 
+#title-func {
+    z-index: 61;
+}
+
 #title-func h2 {
     position: relative;
 }
@@ -95,29 +99,42 @@ body.mac #title-func h2 {
     right: 2px;
     width: 34px;
     height: 101px;
-    background: url(../images/icon_move.png) no-repeat center center;
     text-indent: -100000px;
 }
 
 #channel-list.ui-sortable li p.drag {
-    background: #e9e9e9 url(../images/icon_move.png) no-repeat center center;
+    background-color: #e9e9e9;
 }
 
 #channel-list.ui-sortable-disabled.ui-sortable li p.drag {
-    background: transparent url(../images/icon_move_disable.png) no-repeat center center;
+    background-color: transparent;
 }
 
 #channel-list.ui-sortable li:hover p.drag,
-#channel-list.ui-sortable li             p.drag:hover {
+#channel-list.ui-sortable li       p.drag:hover {
     background-color: #fbfbfb;
     cursor: move;
 }
 
 #channel-list.ui-sortable-disabled li:hover p.drag,
-#channel-list.ui-sortable-disabled li             p.drag:hover {
+#channel-list.ui-sortable-disabled li       p.drag:hover {
     background-color: transparent;
     cursor: default;
 }
+
+#channel-list li p.drag span {
+    display: block;
+    width: 17px;
+    height: 17px;
+    margin: 42px auto 0;
+    background: url(../images/icon_move.png) no-repeat 0 0;
+    text-indent: -100000px;
+}
+
+#channel-list.ui-sortable-disabled.ui-sortable li p.drag span {
+    background-position: 0 -17px;
+}
+
 
 /* =photo-list
 **************************************/
@@ -378,20 +395,20 @@ body.mac #title-func h2 {
     display: block;
     height: 28px;
     padding-left: 7px;
-    background: url(../images/bg_tip_left.png) no-repeat 0 0;
+    background: url(../images/bg_tip.png) no-repeat 0 0;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip .tip-right {
     display: block;
     height: 28px;
     padding-right: 7px;
-    background: url(../images/bg_tip_right.png) no-repeat right 0;
+    background: url(../images/bg_tip.png) no-repeat right -28px;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip .tip-middle {
     display: block;
     height: 28px;
-    background: url(../images/bg_tip_middle.png) repeat-x;
+    background: url(../images/bg_tip.png) repeat-x 0 -56px;
     line-height: 28px;
     white-space: nowrap;
 }
@@ -436,49 +453,47 @@ body.mac #title-func h2 {
 
 #content-main-wrap form .fminput .fmfield p.text {
     float: left;
-    height: 29px;
+    height: 30px;
     margin-right: 10px;
-    padding-left: 4px;
-    background: url(../images/input_box_left.png) no-repeat 0 0;
+    padding-left: 3px;
+    background: url(../images/bg_input.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield p.text span {
     display: block;
-    padding-right: 4px;
-    background: url(../images/input_box_right.png) no-repeat right 0;
+    padding-right: 3px;
+    background: url(../images/bg_input.png) no-repeat right -30px;
 }
 
 #content-main-wrap form .fminput .fmfield p.text span .text {
     width: 485px;
-    height: 29px;
+    height: 30px;
     padding-left: 4px;
     border: none;
-    background: url(../images/input_box_middle.png) repeat-x;
+    background: url(../images/bg_input.png) repeat-x 0 -60px;
     color: #555;
-    font-family: Arial, Helvetica;
-    font-size: 13px;
-    line-height: 29px;
+    font: 13px/30px Arial, Helvetica;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea {
     float: left;
     overflow: hidden;
-    height: 64px;
+    height: 92px;
     margin-right: 10px;
     padding-left: 3px;
-    background: url(../images/input_box_left_lg.png) no-repeat 0 0;
+    background: url(../images/bg_input_lg.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span {
     display: block;
     padding-right: 3px;
-    background: url(../images/input_box_right_lg.png) no-repeat right 0;
+    background: url(../images/bg_input_lg.png) no-repeat right -92px;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span span {
-    height: 64px;
+    height: 92px;
     padding: 0;
-    background: url(../images/input_box_middle_lg.png) repeat-x;
+    background: url(../images/bg_input_lg.png) repeat-x 0 -184px;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span .textarea {
@@ -546,14 +561,14 @@ body.mac #title-func h2 {
 	position: relative;
     float: left;
 	width: 180px;
-	height: 29px;
+	height: 30px;
     margin-right: 10px;
-    padding-left: 4px;
-    background: url(../images/input_box_left.png) no-repeat 0 0;
+    padding-left: 3px;
+    background: url(../images/bg_input.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .select.disable {
-    background: url(../images/input_box_left_disable.png) no-repeat 0 0;
+    background-position: 0 -90px;
 }
 
 #content-main-wrap form .fminput .fmfield .category {
@@ -572,6 +587,10 @@ body.mac #title-func h2 {
 	cursor: pointer;
 }
 
+#content-main-wrap form .fminput .fmfield .select.disable .select-btn {
+    top: 5px;
+}
+
 #content-main-wrap form .fminput .fmfield .select .select-btn.on,
 #content-main-wrap form .fminput .fmfield .select .select-btn:hover {
 	background-position: 0 -451px;
@@ -583,9 +602,9 @@ body.mac #title-func h2 {
 
 #content-main-wrap form .fminput .fmfield .select .select-txt {
     overflow: hidden;
-    height: 29px;
-    padding: 0 4px 0 0;
-    background: url(../images/input_box_right.png) no-repeat right 0;
+    height: 30px;
+    padding: 0 3px 0 0;
+    background: url(../images/bg_input.png) no-repeat right -30px;
     font-size: 13px;
     line-height: 29px;
     white-space: nowrap;
@@ -597,20 +616,20 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap form .fminput .fmfield .select.disable .select-txt {
-    background: url(../images/input_box_right_disable.png) no-repeat right 0;
+    background-position: right -120px;
 }
 
 #content-main-wrap form .fminput .fmfield .select .select-txt a {
     display: block;
-    height: 29px;
+    height: 30px;
     padding-right: 4px;
-    background: url(../images/input_box_middle.png) repeat-x;
+    background: url(../images/bg_input.png) repeat-x 0 -60px;
     color: #555;
     text-decoration: none;
 }
 
 #content-main-wrap form .fminput .fmfield .select.disable .select-txt a {
-    background: url(../images/input_box_middle_disable.png) repeat-x;
+    background-position: 0 -150px;
     color: #777;
 }
 
@@ -736,7 +755,7 @@ body.mac #title-func h2 {
     display: block;
     width: 14px;
     height: 15px;
-    background: url(../images/check_box.png) no-repeat 0 0;
+    background: url(../images/bg_checkbox.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .connected .share-item .checker input {
@@ -750,7 +769,7 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap form .fminput .fmfield .connected .share-item .disabled span {
-    background: url(../images/check_box_disable.png) no-repeat 0 0;
+    background-position: 0 -15px;
 }
 
 #content-main-wrap form .fminput .fmfield .connected .share-item .page-list {
@@ -877,13 +896,20 @@ body.mac #title-func h2 {
 
 #content-main #content-main-wrap form .fminput .fmfield .connected .share-item .page-list ul li a {
     display: block;
-    padding: 0 0 0 26px;
-    background: url(../images/check_box.png) no-repeat 4px 7px;
+    padding: 6.5px 0;
     color: #555;
     text-decoration: none;
 }
 
-#content-main #content-main-wrap form .fminput .fmfield .connected .share-item .page-list ul li.checked a {
+#content-main #content-main-wrap form .fminput .fmfield .connected .share-item .page-list ul li a span {
+    display: block;
+    height: 15px;
+    line-height: 15px;
+    padding: 0 0 0 26px;
+    background: url(../images/bg_checkbox.png) no-repeat 4px 0;
+}
+
+#content-main #content-main-wrap form .fminput .fmfield .connected .share-item .page-list ul li.checked a span {
     background: url(../images/check_box_check.png) no-repeat 4px center;
     font-weight: bold;
 }
@@ -967,20 +993,20 @@ body.mac #title-func h2 {
     float: left;
     height: 20px;
     margin: 0 5px 5px 0;
-    padding-left: 4px;
-    background: url(../images/tag_left_disable.png) no-repeat 0 0;
+    padding-left: 3px;
+    background: url(../images/bg_tag.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li span {
     display: block;
-    padding-right: 4px;
-    background: url(../images/tag_right_disable.png) no-repeat right 0;
+    padding-right: 3px;
+    background: url(../images/bg_tag.png) no-repeat right -20px;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li span a {
     display: block;
     height: 20px;
-    background: url(../images/tag_middle_disable.png) repeat-x;
+    background: url(../images/bg_tag.png) repeat-x 0 -40px;
     color: #555;
     font-size: 13px;
     line-height: 20px;
@@ -989,18 +1015,18 @@ body.mac #title-func h2 {
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li:hover,
 #content-main-wrap form .fminput .fmfield .tag-list ul li.on {
-    background: url(../images/tag_left_on.png) no-repeat 0 0;
+    background: url(../images/bg_tag.png) no-repeat 0 -60px;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li:hover span,
 #content-main-wrap form .fminput .fmfield .tag-list ul li.on    span {
-    background: url(../images/tag_right_on.png) no-repeat right 0;
+    background: url(../images/bg_tag.png) no-repeat right -80px;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li:hover span a,
 #content-main-wrap form .fminput .fmfield .tag-list ul li.on    span a {
 	color: #777;
-    background: url(../images/tag_middle_on.png) repeat-x;
+    background: url(../images/bg_tag.png) repeat-x 0 -100px;
 }
 
 #content-main-wrap form .fminput .fmfield .notice {
