--- a/stylesheets/episode.css
+++ b/stylesheets/episode.css
@@ -225,7 +225,6 @@ body.mac #title-func ul li p span a {
 
 #ep-list ul li {
     position: relative;
-    overflow: hidden;
     margin-top: -2px;
 }
 
@@ -247,7 +246,7 @@ body.mac #title-func ul li p span a {
 #ep-list ul li a.warning {
     position: absolute;
     top: 50%;
-    left: 10px;
+    left: -30px;
     z-index: 49;
     width: 15px;
     height: 14px;
@@ -282,20 +281,20 @@ body.mac #title-func ul li p span a {
     display: block;
     height: 28px;
     padding-left: 7px;
-    background: url(../images/bg_tip_left.png) no-repeat 0 bottom;
+    background: url(../images/bg_tip.png) no-repeat 0 0;
 }
 
 #ep-list ul li a.warning .tip .tip-right {
     display: block;
     height: 28px;
     padding-right: 7px;
-    background: url(../images/bg_tip_right.png) no-repeat right bottom;
+    background: url(../images/bg_tip.png) no-repeat right -28px;
 }
 
 #ep-list ul li a.warning .tip .tip-middle {
     display: block;
     height: 28px;
-    background: url(../images/bg_tip_middle.png) repeat-x bottom;
+    background: url(../images/bg_tip.png) repeat-x 0 -56px;
     line-height: 28px;
 }
 
@@ -463,6 +462,9 @@ body.mac #title-func ul li p span a {
     padding: 0 0 0 4px;
     background: url(../images/edit_box_left.png) no-repeat 0 0;
 }
+#ep-list.ui-sortable ul li .episode .btns {
+    color: #777;
+}
 
 #ep-list ul li .episode .btns .btn-wrap {
     padding: 0 3px 0 0;
@@ -547,8 +549,8 @@ body.mac #title-func ul li p span a {
     font: 13px Arial, Helvetica;
 }
 
-#ep-list ul li .views {
-    width: 85px;
+#title-func .caption .views, #ep-list ul li .views {
+    width: 65px;
 }
 
 #ep-list ul li .scheduled-time  p,
@@ -579,21 +581,21 @@ body.mac #title-func ul li p span a {
 
 #episode-list.ui-sortable li p.drag {
     height: 80px;
-    background: #e9e9e9 url(../images/icon_move.png) no-repeat center center;
+    background-color: #e9e9e9;
 }
 
 #episode-list.ui-sortable-disabled.ui-sortable li p.drag {
-    background: transparent url(../images/icon_move_disable.png) no-repeat center center;
+    background-color: transparent;
 }
 
 #episode-list.ui-sortable li:hover p.drag,
-#episode-list.ui-sortable li p.drag:hover {
+#episode-list.ui-sortable li       p.drag:hover {
     background-color: #fbfbfb;
     cursor: move;
 }
 
 #episode-list.ui-sortable-disabled li:hover p.drag,
-#episode-list.ui-sortable-disabled li p.drag:hover {
+#episode-list.ui-sortable-disabled li       p.drag:hover {
     background-color: transparent;
     cursor: default;
 }
@@ -602,7 +604,299 @@ body.mac #title-func ul li p span a {
     background-color: #fbfbfb;
 }
 
+#ep-list ul li p.drag span {
+    display: block;
+    width: 17px;
+    height: 17px;
+    margin: 32px auto 0;
+    background: url(../images/icon_move.png) no-repeat 0 0;
+}
+
+#episode-list.ui-sortable-disabled.ui-sortable li p.drag span {
+    background-position: 0 -17px;
+}
+
 #ep-list p.more {
 	width: 120px;
 	margin: 0 auto;
+}
+
+/* Episode List */
+#title-func .caption p.number {
+  width: 49px;
+  float: left;
+  padding-bottom: 5px;
+  font-weight: bold;
+  font-size: 13px;
+  text-align: center;
+}
+#ep-list ul li div.number {
+  float: left;
+  overflow: hidden;
+  font-size: 13px;
+  text-align: center;
+  font-weight: bold;
+  line-height: 1;
+  padding: 24px 10px 0 10px;
+}
+
+/* Disable */
+#episode-list.ui-sortable li.list_collapse_top.on, #episode-list.ui-sortable li.list_collapse_top.on:hover {
+  height: 28px;
+  padding: 0 0 0 3px;
+  background: url(../images/bg_list_expand.png) no-repeat 0 -252px;
+  position: relative;
+  cursor: default;
+  margin-top: 0;
+  color: #777;
+}
+#episode-list.ui-sortable li.list_collapse_top.on {
+  color: #555;	
+}
+#episode-list.ui-sortable li.list_collapse_top .right {
+  background: url(../images/bg_list_expand.png) no-repeat right -280px;
+  padding: 0 3px 0 0;
+  display: block;
+}
+#episode-list.ui-sortable li.list_collapse_top .right .middle {
+  background: url(../images/bg_list_expand.png) repeat 0 -308px;
+  height: 28px;
+  display: block;
+}
+#episode-list.ui-sortable li.list_expand, #episode-list.ui-sortable li.list_expand:hover {
+  height: 28px;
+  padding: 0 0 0 3px;
+  background: url(../images/bg_list_expand.png) no-repeat 0 -168px;
+  position: relative;
+  cursor: default;
+  margin-top: 0;
+  color: #777;
+}
+#episode-list.ui-sortable li.list_expand .right {
+  background: url(../images/bg_list_expand.png) no-repeat right -196px;
+  padding: 0 3px 0 0;
+  display: block;
+}
+#episode-list.ui-sortable li.list_expand .right .middle {
+  background: url(../images/bg_list_expand.png) repeat 0 -224px;
+  height: 28px;
+  display: block;
+}
+#episode-list.ui-sortable li.list_collapse_bottom.on, #episode-list.ui-sortable li.list_collapse_bottom.on:hover {
+  height: 28px;
+  padding: 0 0 0 3px;
+  background: url(../images/bg_list_expand.png) no-repeat 0 -252px;
+  position: relative;
+  cursor: default;
+  margin-top: 0;
+  color: #777;
+}
+#episode-list.ui-sortable li.list_collapse_bottom.on .right {
+  background: url(../images/bg_list_expand.png) no-repeat right -280px;
+  padding: 0 3px 0 0;
+  display: block;
+}
+
+#episode-list.ui-sortable li.list_collapse_bottom.on .right .middle {
+  background: url(../images/bg_list_expand.png) repeat 0 -308px;
+  height: 28px;
+  display: block;
+}
+
+/* List */
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top {
+  height: 28px;
+  padding: 0 0 0 3px;
+  background: url(../images/bg_list_collapse_top.png) no-repeat 0 0;
+  position: relative;
+  margin-top: 0px;
+  cursor: pointer;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top .right {
+  background: url(../images/bg_list_collapse_top.png) no-repeat right -28px;
+  padding: 0 3px 0 0;
+  display: block;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top .right .middle {
+  background: url(../images/bg_list_collapse_top.png) repeat 0 -56px;
+  height: 28px;
+  display: block;
+}
+#episode-list li .list-number {
+  position: absolute;
+  top: 6px;
+  left: 57px;
+  font-size: 13px;
+  font-weight: bold;
+}
+#episode-list li .icon-expand-on-left {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 -16px;
+  position: absolute;
+  top: 6px;
+  left: 6px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top:hover, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.on {
+  background: url(../images/bg_list_collapse_top.png) no-repeat 0 -84px;
+  cursor: pointer;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top:hover ,#episode-list.ui-sortable.ui-sortable-disabled li.list_expand:hover, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom:hover {
+  color: #777;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top:hover .right, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.on .right {
+  background: url(../images/bg_list_collapse_top.png) no-repeat right -112px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top:hover .right .middle, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.on .right .middle {
+  background: url(../images/bg_list_collapse_top.png) repeat 0 -140px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.disable {
+  background: url(../images/bg_list_collapse_top.png) no-repeat 0 -168px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.disable .right {
+  background: url(../images/bg_list_collapse_top.png) no-repeat right -196px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_top.disable .right .middle {
+  background: url(../images/bg_list_collapse_top.png) repeat 0 -224px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand {
+  height: 28px;
+  padding: 0 0 0 3px;
+  background: url(../images/bg_list_expand.png) no-repeat 0 0;
+  position: relative;
+  margin-top: 0;
+  cursor: pointer;
+  color: #555;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand .right {
+  background: url(../images/bg_list_expand.png) no-repeat right -28px;
+  padding: 0 3px 0 0;
+  display: block;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand .right .middle {
+  background: url(../images/bg_list_expand.png) repeat 0 -56px;
+  height: 28px;
+  display: block;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand:hover, #episode-list.ui-sortable.ui-sortable-disabled li.list_expand.on {
+  background: url(../images/bg_list_expand.png) no-repeat 0 -84px;
+  cursor: pointer;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand:hover .right, #episode-list.ui-sortable.ui-sortable-disabled li.list_expand.on .right {
+  background: url(../images/bg_list_expand.png) no-repeat right -112px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand:hover .right .middle, #episode-list.ui-sortable.ui-sortable-disabled li.list_expand.on .right .middle {
+  background: url(../images/bg_list_expand.png) repeat 0 -140px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand.disable {
+  background: url(../images/bg_list_expand.png) no-repeat 0 -168px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand.disable .right {
+  background: url(../images/bg_list_expand.png) no-repeat right -196px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_expand.disable .right .middle {
+  background: url(../images/bg_list_expand.png) repeat 0 -224px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom {
+  height: 28px;
+  padding: 0 0 0 3px;
+  background: url(../images/bg_list_collapse_bottom.png) no-repeat 0 0;
+  position: relative;
+  margin-top: 0;
+  cursor: pointer;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom .right {
+  background: url(../images/bg_list_collapse_bottom.png) no-repeat right -28px;
+  padding: 0 3px 0 0;
+  display: block;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom .right .middle {
+  background: url(../images/bg_list_collapse_bottom.png) repeat 0 -56px;
+  height: 28px;
+  display: block;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom:hover, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom.on {
+  background: url(../images/bg_list_collapse_bottom.png) no-repeat 0 -84px;
+  cursor: pointer;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom:hover .right, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom.on .right {
+  background: url(../images/bg_list_collapse_bottom.png) no-repeat right -112px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom:hover .right .middle, #episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom.on .right .middle {
+  background: url(../images/bg_list_collapse_bottom.png) repeat 0 -140px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom.disable {
+  background: url(../images/bg_list_collapse_bottom.png) no-repeat 0 -168px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom.disable .right {
+  background: url(../images/bg_list_collapse_bottom.png) no-repeat right -196px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled li.list_collapse_bottom.disable .right .middle {
+  background: url(../images/bg_list_collapse_bottom.png) repeat 0 -224px;
+}
+
+/* Icon */
+#episode-list.ui-sortable.ui-sortable-disabled .icon-expand-left {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 -16px;
+  position: absolute;
+  top: 6px;
+  left: 8px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled .icon-expand-right {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 -16px;
+  position: absolute;
+  top: 6px;
+  right: 8px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled .icon-expand-left.on {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 0;
+  position: absolute;
+  top: 6px;
+  left: 8px;
+}
+#episode-list.ui-sortable.ui-sortable-disabled .icon-expand-right.on {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 0;
+  position: absolute;
+  top: 6px;
+  right: 8px;
+}
+#episode-list.ui-sortable .icon-expand-left {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 -48px;
+  position: absolute;
+  top: 6px;
+  left: 8px;
+}
+#episode-list.ui-sortable .icon-expand-right {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 -48px;
+  position: absolute;
+  top: 6px;
+  right: 8px;
+}
+#episode-list.ui-sortable .icon-expand-left.on{
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 -32px;
+  position: absolute;
+  top: 6px;
+  left: 8px;
+}
+#episode-list.ui-sortable .icon-expand-right.on {
+  width: 16px;
+  height: 16px;
+  background: url(../images/icon_expand_collapse.png) no-repeat 0 -32px;
+  position: absolute;
+  top: 6px;
+  right: 8px;
 }
