--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -83,7 +83,7 @@ body.mac #title-func h2 {
 }
 
 #channel-list li .container-left {
-    height: 101px;
+    height: 126px;
     padding: 2px 0;
     background: url(../images/divider_vertical.png) repeat-y 0 0;
 }
@@ -98,7 +98,7 @@ body.mac #title-func h2 {
     top: 2px;
     right: 2px;
     width: 34px;
-    height: 101px;
+    height: 126px;
     text-indent: -100000px;
 }
 
@@ -126,7 +126,7 @@ body.mac #title-func h2 {
     display: block;
     width: 17px;
     height: 17px;
-    margin: 42px auto 0;
+    margin: 57px auto 0;
     background: url(../images/icon_move.png) no-repeat 0 0;
     text-indent: -100000px;
 }
@@ -135,14 +135,13 @@ body.mac #title-func h2 {
     background-position: 0 -17px;
 }
 
-
 /* =photo-list
 **************************************/
 
 #channel-list li .photo-list {
     position: relative;
     float: left;
-    width: 232px;
+    width: 203px;
     padding: 7px 4px 4px 8px;
 }
 
@@ -167,27 +166,39 @@ body.mac #title-func h2 {
     border: none;
 }
 
-#channel-list li .photo-list a img.watermark {
-    display: none;
+#channel-list li .photo-list img.ch {
+    float: left;
     position: absolute;
-    top: 34px;
-    left: 68px;
-    z-index: 10;
+	left: 13px;
+	top: 12px;
+    border: none;
+	z-index: 10;
 }
-
-#channel-list li .photo-list a:hover img.img {
-    background-color: #fff;
+#channel-list li .photo-list img.ep {
+    float: left;
+    margin: 0 5px 6px 0;
+    border: none;
     opacity: 0.7;
     filter: alpha(opacity=70);
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
 }
+#channel-list li .photo-list:hover img.ep {
+    background-color: #fff;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+}
+
+#channel-list li .photo-list a img.watermark {
+    position: absolute;
+	display: block;
+    top: 46px;
+    left: 92px;
+    z-index: 10;
+}
 
 #channel-list li .photo-list a:hover span {
 	display: none;
-}
-
-#channel-list li .photo-list a:hover img.watermark {
-    display: block;
 }
 
 /* =info
@@ -196,11 +207,12 @@ body.mac #title-func h2 {
 #channel-list li .info {
     float: left;
     overflow: hidden;
+	height: 126px;
 }
 
 #channel-list li .info h3 {
     padding: 5px 0 0;
-    margin-bottom: 15px;
+    margin: 5px 0 35px 0;
     font-weight: 600;
     font-size: 17px;
 }
@@ -233,7 +245,8 @@ body.mac #title-func h2 {
     float: right;
     position: relative;
     width: 166px;
-    height: 103px;
+    height: 116px;
+	margin: 5px 0 0 0;
 }
 
 #channel-list li .func-wrap p.time {
